fix(style): main scrollbar

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -10,7 +10,7 @@
 
 .main-scrollbar::-webkit-scrollbar {
     width: 12px;
-    height: 12px;
+    height: 8px;
 }
 
 .main-scrollbar::-webkit-scrollbar-track {
@@ -19,6 +19,6 @@
 }
 
 .main-scrollbar::-webkit-scrollbar-thumb {
-    background-color: rgb(185, 28, 28);
+    background-color: rgb(159, 18, 57);
     border-radius: 1rem
 }
